--- a/style.css
+++ b/style.css
@@ -9,12 +9,12 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: #333;
+    background-color: #fff;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 h1 {
-    color: #FFF;
+    color: #333;
     margin-bottom: 20px;
 }
 .keys {
@@ -25,8 +25,8 @@ h1 {
 .key {
     width: 80px;
     height: 80px;
-    border: 2px solid #FFF;
-    color: #FFF;
+    border: 2px solid #333;
+    color: #333;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -34,8 +34,8 @@ h1 {
     font-weight: bold;
 }
 .key.active {
-    border: 2px solid #FF0;
-    color: #FF0;
+    border: 2px solid #ff2f00;
+    color: #ff2f00;
 }
 
 .composer {
@@ -52,18 +52,25 @@ h1 {
     width: 100%;
     height: 40px;
     background: none;
-    border: 2px solid #FFF;
-    color: #FFF;
+    border: 2px solid #333;
+    color: #333;
     font-size: 16px;
     margin-top: 10px;
     cursor: pointer;
 }
 .composer button:hover {
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(13, 59, 159, 0.55);
+    color: #fff;
 }
 
 footer {
     margin-top: 20px;
-    color: #FFF;
+    color: #0d3b9f;
     font-size: 13px;
+}
+
+footer a {
+    text-decoration: none;
+    color: #0d3b9f;
+    cursor: pointer;
 }
